# HA-device_manager

./: .editorconfig  .gitignore  LICENSE  README.md  pyproject.toml
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/actions/quality-backend/: action.yml
.github/actions/quality-frontend/: action.yml
.github/agents/: create-issue.agent.md  fix-issue.agent.md
.github/workflows/: ci.yml  release.yml
custom_components/device_manager/: __init__.py  config_flow.py  const.py  manifest.json  run_tests.py  strings.json
custom_components/device_manager/controllers/: __init__.py  activity_log_controller.py  base.py  building_controller.py  crud.py  db_backup_controller.py  deploy_controller.py  device_controller.py  device_firmware_controller.py  device_function_controller.py  device_model_controller.py  export_controller.py  floor_controller.py  ha_floors_controller.py  ha_groups_controller.py  ha_rooms_controller.py  hierarchy_controller.py  import_controller.py  maintenance_controller.py  room_controller.py  settings_controller.py  ssh_key_controller.py  static_controller.py  stats_controller.py
custom_components/device_manager/models/: __init__.py  activity_log.py  base.py  building.py  device.py  device_firmware.py  device_function.py  device_model.py  floor.py  room.py
custom_components/device_manager/provisioning/: .env.sample  PROVISION.md  common.py  contract.py  deploy.py  discovery.py  tasmota.py  utility.py  wled.py  zigbee.py
custom_components/device_manager/repositories/: __init__.py  activity_log_repository.py  base.py  building_repository.py  device_firmware_repository.py  device_function_repository.py  device_model_repository.py  device_repository.py  floor_repository.py  room_repository.py  settings_repository.py
custom_components/device_manager/services/: __init__.py  csv_import_service.py  database_manager.py
custom_components/device_manager/tests/: helpers.py  test_crud_fk_diff.py  test_device.py  test_dm_device_computed.py  test_ha_floors.py  test_ha_groups.py  test_ha_rooms.py  test_identifier_validation.py  test_import.py  test_init_unload.py  test_mosquitto_config.py  test_network_scanner.py
custom_components/device_manager/translations/: fr.json
custom_components/device_manager/utils/: __init__.py  case_convert.py  crypto.py
frontend/: eslint.config.js  package-lock.json  package.json  vite.config.ts
frontend/docs/devices/: overview.en.md  overview.fr.md
frontend/docs/maintenance/: overview.en.md
frontend/docs/settings/: overview.en.md  overview.fr.md
frontend/src/: i18n.ts  vite-env.d.ts
(+139 files in other folders)
